After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 674553 - Take picture button in image change doesn't work.
Take picture button in image change doesn't work.
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: General
3.4.x
Other Linux
: Normal major
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2012-04-22 06:29 UTC by Pranav Kant
Modified: 2012-05-21 09:15 UTC
See Also:
GNOME target: ---
GNOME version: 3.3/3.4


Attachments
configure.ac: set cheese version in CHEESE_GTK_REQUIRED (1.24 KB, patch)
2012-05-21 08:57 UTC, Guillaume Desmottes
committed Details | Review
empathy-accounts: init cheese-gtk if needed (2.21 KB, patch)
2012-05-21 08:58 UTC, Guillaume Desmottes
committed Details | Review

Description Pranav Kant 2012-04-22 06:29:58 UTC
When we try to change the image for the account, we click on the image out there and then file browser opens up to select images. ON the bottom we have three buttons out of which one says 'Take Picture'. Upon clicking that nothing happens, though it is expected that cheese should open upon clicking that button and latest picture captured from cheese should be returned to the function that called file browser.
Comment 1 André Klapper 2012-04-22 15:27:00 UTC
Which distribution is this about?
Is there any output in the terminal (also see https://live.gnome.org/Empathy/Debugging )?
Comment 2 Will Thompson 2012-05-17 17:20:19 UTC
For me, empathy-accounts 3.4.2 just crashes. The output in the terminal is pretty clear as to why:

(empathy-accounts:13510): Clutter-CRITICAL **: _clutter_id_pool_add: assertion `id_pool != NULL' failed

(empathy-accounts:13510): Clutter-CRITICAL **: Unable to check features. Have you initialized Clutter?

Program received signal SIGSEGV, Segmentation fault.
0x00007ffff24e6903 in cogl_object_ref () from /usr/lib/x86_64-linux-gnu/libcogl.so.9

Here's a backtrace, for completeness:

  • #0 cogl_object_ref
    from /usr/lib/x86_64-linux-gnu/libcogl.so.9
  • #1 ??
    from /usr/lib/x86_64-linux-gnu/libcogl.so.9
  • #2 cogl_onscreen_new
    from /usr/lib/x86_64-linux-gnu/libcogl.so.9
  • #3 clutter_stage_x11_realize
    at ./x11/clutter-stage-x11.c line 579
  • #4 clutter_stage_realize
    at ./clutter-stage.c line 758
  • #5 _g_closure_invoke_va
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gclosure.c line 840
  • #6 g_signal_emit_valist
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gsignal.c line 3207
  • #7 g_signal_emit
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gsignal.c line 3352
  • #8 clutter_actor_realize
    at ./clutter-actor.c line 1797
  • #9 _clutter_stage_manager_set_default_stage
    at ./clutter-stage-manager.c line 226
  • #10 clutter_stage_constructed
    at ./clutter-stage.c line 1642
  • #11 g_object_newv
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gobject.c line 1741
  • #12 g_object_new
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gobject.c line 1542
  • #13 gtk_clutter_embed_init
    at ./gtk-clutter-embed.c line 742
  • #14 g_type_create_instance
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gtype.c line 1892
  • #15 g_object_constructor
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gobject.c line 1849
  • #16 g_object_newv
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gobject.c line 1632
  • #17 g_object_new
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gobject.c line 1542
  • #18 ??
    from /usr/lib/x86_64-linux-gnu/libcheese-gtk.so.21
  • #19 g_type_create_instance
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gtype.c line 1892
  • #20 g_object_constructor
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gobject.c line 1849
  • #21 g_object_newv
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gobject.c line 1632
  • #22 g_object_new
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gobject.c line 1542
  • #23 ??
    from /usr/lib/x86_64-linux-gnu/libcheese-gtk.so.21
  • #24 g_type_create_instance
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gtype.c line 1892
  • #25 g_object_constructor
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gobject.c line 1849
  • #26 g_object_newv
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gobject.c line 1713
  • #27 g_object_new
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gobject.c line 1542
  • #28 choose_avatar_from_webcam
    at empathy-avatar-chooser.c line 864
  • #29 avatar_chooser_response_cb
    at empathy-avatar-chooser.c line 910
  • #30 g_closure_invoke
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gclosure.c line 777
  • #31 signal_emit_unlocked_R
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gsignal.c line 3547
  • #32 g_signal_emit_valist
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gsignal.c line 3296
  • #33 g_signal_emit
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gsignal.c line 3352
  • #34 _g_closure_invoke_va
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gclosure.c line 840
  • #35 g_signal_emit_valist
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gsignal.c line 3207
  • #36 g_signal_emit
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gsignal.c line 3352
  • #37 ??
    from /usr/lib/x86_64-linux-gnu/libgtk-3.so.0
  • #38 g_closure_invoke
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gclosure.c line 777
  • #39 signal_emit_unlocked_R
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gsignal.c line 3477
  • #40 g_signal_emit_valist
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gsignal.c line 3296
  • #41 g_signal_emit
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gsignal.c line 3352
  • #42 ??
    from /usr/lib/x86_64-linux-gnu/libgtk-3.so.0
  • #43 ??
    from /usr/lib/x86_64-linux-gnu/libgtk-3.so.0
  • #44 _g_closure_invoke_va
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gclosure.c line 840
  • #45 g_signal_emit_valist
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gsignal.c line 3207
  • #46 g_signal_emit
    at /tmp/buildd/glib2.0-2.32.2/./gobject/gsignal.c line 3352
  • #47 ??
    from /usr/lib/x86_64-linux-gnu/libgtk-3.so.0
  • #48 ??
    from /usr/lib/x86_64-linux-gnu/libgtk-3.so.0
  • #49 gtk_main_do_event
    from /usr/lib/x86_64-linux-gnu/libgtk-3.so.0
  • #50 ??
    from /usr/lib/x86_64-linux-gnu/libgdk-3.so.0
  • #51 g_main_dispatch
    at /tmp/buildd/glib2.0-2.32.2/./glib/gmain.c line 2539
  • #52 g_main_context_dispatch
    at /tmp/buildd/glib2.0-2.32.2/./glib/gmain.c line 3075
  • #53 g_main_context_iterate
    at /tmp/buildd/glib2.0-2.32.2/./glib/gmain.c line 3146
  • #54 g_main_context_iterate
    at /tmp/buildd/glib2.0-2.32.2/./glib/gmain.c line 3083
  • #55 g_main_context_iteration
    at /tmp/buildd/glib2.0-2.32.2/./glib/gmain.c line 3207
  • #56 g_application_run
    at /tmp/buildd/glib2.0-2.32.2/./gio/gapplication.c line 1507
  • #57 main
    at empathy-accounts.c line 246

Comment 3 Guillaume Desmottes 2012-05-21 08:57:55 UTC
Created attachment 214544 [details] [review]
configure.ac: set cheese version in CHEESE_GTK_REQUIRED
Comment 4 Guillaume Desmottes 2012-05-21 08:58:00 UTC
Created attachment 214545 [details] [review]
empathy-accounts: init cheese-gtk if needed

The avatar chooser, which is not used by empathy-accounts, may use Cheese to
take a photo.

cheese_gtk_init() has been added during the 3.4 cycle so I bumped the dep to
3.4.0 as that's the version I have tested it with it. It's an optionnal dep
anyway so...
Comment 5 Guillaume Desmottes 2012-05-21 09:15:17 UTC
Attachment 214544 [details] pushed as 87524d4 - configure.ac: set cheese version in CHEESE_GTK_REQUIRED
Attachment 214545 [details] pushed as 2b26304 - empathy-accounts: init cheese-gtk if needed