empathy-accounts: init cheese-gtk if needed

The avatar chooser, which is not used by empathy-accounts, may use Cheese to
take a photo.

cheese_gtk_init() has been added during the 3.4 cycle so I bumped the dep to
3.4.0 as that's the version I have tested it with it. It's an optionnal dep
anyway so...

https://bugzilla.gnome.org/show_bug.cgi?id=674553